# optiplower

./: Optiplower.kicad_sym  README.md  dumper.kicad_pro  fp-lib-table  optiplower.kicad_pcb  optiplower.kicad_pro  optiplower.kicad_sch  sym-lib-table
DS2502_prog/: DS2502_prog-eagle-import.kicad_sym  DS2502_prog.kicad_pcb  DS2502_prog.kicad_pro  DS2502_prog.kicad_sch  fp-lib-table  sym-lib-table
DS2502_prog/DS2502_prog.pretty/: 0207_2V.kicad_mod  0309_10.kicad_mod  C025-025X050.kicad_mod  P1-13.kicad_mod  TO92-.kicad_mod  TO92-LINE.kicad_mod
Optiplower.pretty/: L_MDA1050_10x11mm.kicad_mod  TO-252-2.kicad_mod
Programmer/: Programmer.kicad_pro  Programmer.kicad_sch
arduino-firmware/: onewirehub.ino
discover/: Cargo.toml  README.md
discover/.cargo/: config.toml
discover/src/: main.rs
ds2502-emulator/: Makefile  ds2502-emulator.ino  eeprom-data.hex  sketch.yaml
ds2502-emulator/src/: DS2502.cpp  DS2502.h  OneWireHub.cpp  OneWireHub.h  OneWireHub_config.h  OneWireItem.cpp  OneWireItem.h  platform.h
firmware/: Cargo.toml  Makefile  README.md  dell-45w-charger.hex  dell-charger-emulator.hex  ds2502-1-blank.hex  ds2502-2-blank.hex  eeprom-data.hex  main.c  rust-toolchain.toml  xps15-9570-130w-charger.hex
firmware/.cargo/: config.toml
firmware/src/: main.rs
hardware/: Optiplower.kicad_sym  TC33X-2-102E.step  dumper.kicad_sch  optiplower.kicad_pcb  optiplower.kicad_pro  optiplower.kicad_sch  optiplower.step
production/: netlist.ipc
pulse-view/: attiny-90w-1.sr  dell-65w-legit  dell-65w-legit-2  dell-65w-legit.pvs  dell-65w-legit.sr  stm32-discover.sr
(+17 files in other folders)
